--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -5,11 +5,22 @@ import Container from "@components/Container.astro";
 import { dateRange } from "@lib/utils";
 import { WORK } from "@consts";
 
-const collection = (await getCollection("work"))
+const collectionWork = (await getCollection("work"))
   .sort((a, b) => new Date(b.data.dateStart).valueOf() - new Date(a.data.dateStart).valueOf());
 
+
+const collectionEducation = (await getCollection("education"))
+.sort((a, b) => new Date(b.data.dateStart).valueOf() - new Date(a.data.dateStart).valueOf());
+
 const work = await Promise.all(
-  collection.map(async (item) => {
+collectionWork.map(async (item) => {
+    const { Content } = await item.render();
+    return { ...item, Content };
+  })
+);
+
+const education = await Promise.all(
+collectionEducation.map(async (item) => {
     const { Content } = await item.render();
     return { ...item, Content };
   })
@@ -22,7 +33,7 @@ const work = await Promise.all(
       <div class="animate font-semibold text-black dark:text-white">
         Work
       </div>
-      <!-- <ul class="flex flex-col space-y-4">
+      <ul class="flex flex-col space-y-4">
         { 
           work.map(entry => (
             <li class="animate">
@@ -41,7 +52,30 @@ const work = await Promise.all(
             </li>
           ))
         }
-      </ul> -->
+      </ul>
+      <div class="animate font-semibold text-black dark:text-white">
+        Education
+      </div>
+      <ul class="flex flex-col space-y-4">
+        {
+          education.map(entry => (
+          <li class="animate">
+              <div class="text-sm opacity-75">
+                {dateRange(entry.data.dateStart, entry.data.dateEnd)}
+              </div>
+              <div class="font-semibold text-black dark:text-white">
+                {entry.data.school}
+              </div>
+              <div class="text-sm opacity-75">
+                {entry.data.degree}
+              </div>
+              <article>
+                <entry.Content />
+              </article>
+            </li>
+          ))
+        }
+      </ul>
 
       <!-- <ul class="animate flex flex-col gap-4"></ul> -->
     </div>
