latest posts, work experience, recent projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ const work = await Promise.all(
         </article>
       </section>
 
-      <!-- <section class="animate space-y-6">
+      <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Latest posts
@@ -70,9 +70,9 @@ const work = await Promise.all(
             </li>
           ))}
         </ul>
-      </section> -->
+      </section>
 
-      <!-- <section class="animate space-y-6">
+      <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Work Experience
@@ -94,14 +94,17 @@ const work = await Promise.all(
                 {entry.data.role}
               </div>
               <article>
-                <entry.Content />
+                {/* <entry.Content /> */}
+                <p>
+                  {entry.data.summary}
+                </p>
               </article>
             </li>
           ))}
         </ul>
-      </section> -->
+      </section>
 
-      <!-- <section class="animate space-y-6">
+      <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Recent projects
@@ -117,7 +120,7 @@ const work = await Promise.all(
             </li>
           ))}
         </ul>
-      </section> -->
+      </section>
 
       <section class="animate space-y-4">
         <h5 class="font-semibold text-black dark:text-white">
