--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -31,7 +31,7 @@ const years = Object.keys(posts).sort((a, b) => parseInt(b) - parseInt(a));
       <div class="animate font-semibold text-black dark:text-white">
         Blog
       </div>
-      <!-- <div class="space-y-4">
+      <div class="space-y-4">
         {years.map(year => (
           <section class="animate space-y-4">
             <div class="font-semibold text-black dark:text-white">
@@ -50,7 +50,7 @@ const years = Object.keys(posts).sort((a, b) => parseInt(b) - parseInt(a));
             </div>
           </section>
         ))}
-      </div> -->
+      </div>
     </div>
   </Container>
 </PageLayout>
