--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -16,7 +16,7 @@ const projects = (await getCollection("projects"))
       <div class="animate font-semibold text-black dark:text-white">
         Projects
       </div>
-      <!-- <ul class="animate flex flex-col gap-4">
+      <ul class="animate flex flex-col gap-4">
         {
           projects.map((project) => (
             <li>
@@ -24,7 +24,7 @@ const projects = (await getCollection("projects"))
             </li>
           ))
         }
-      </ul> -->
+      </ul>
     </div>
   </Container>
 </PageLayout>
