--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,29 +32,29 @@ const work = await Promise.all(
 
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
-    <h4 class="animate font-semibold text-black dark:text-white">
+    <h4 class="font-semibold text-black dark:text-white">
       Hi, I'm Marko Vidaković <span class="text-xl">👋🏻</span>
     </h4>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
-          <p class="animate">
+          <p class="">
             I'm a software engineer who enjoys building fast, scalable, and well-designed systems. 
             Solving complex problems, designing clean architectures, and finding elegant solutions are what I enjoy most. 
             I mainly work with Go and TypeScript, building everything from backend services to modern frontends, always striving for simplicity, performance, and maintainability.
           </p>
-          <p class="animate">
+          <p class="">
             Learning is a constant for me—whether it’s exploring new technologies, refining existing approaches, or diving into a completely unfamiliar topic, 
             I enjoy the process of improving and evolving as a developer.
           </p>
-          <p class="animate">
+          <p class="">
             This site is my personal space where I share projects I'm building, thoughts on software development, and the occasional deep dive into topics that interest me. 
             Feel free to look around!
           </p>
         </article>
       </section>
 
-      <section class="animate space-y-6">
+      <section class="space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Latest posts
@@ -72,7 +72,7 @@ const work = await Promise.all(
         </ul>
       </section>
 
-      <section class="animate space-y-6">
+      <section class="space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Work Experience
@@ -104,7 +104,7 @@ const work = await Promise.all(
         </ul>
       </section>
 
-      <section class="animate space-y-6">
+      <section class="space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Recent projects
@@ -122,7 +122,7 @@ const work = await Promise.all(
         </ul>
       </section>
 
-      <section class="animate space-y-4">
+      <section class="space-y-4">
         <h5 class="font-semibold text-black dark:text-white">
           Let's Connect
         </h5>
