--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,12 +25,12 @@ import { SITE } from "@consts";
         <span>
           {`/`}
         </span>
-        <Link href="/work">
+        <!-- <Link href="/work">
           work
         </Link>
         <span>
           {`/`}
-        </span>
+        </span> -->
         <Link href="/projects">
           projects
         </Link>
