--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -32,6 +32,11 @@ const years = Object.keys(posts).sort((a, b) => parseInt(b) - parseInt(a));
         Blog
       </div>
       <div class="space-y-4">
+        <section>
+          <article>
+            <p>Content coming soon.</p>
+          </article>
+        </section>
         {years.map(year => (
           <section class="space-y-4">
             <div class="font-semibold text-black dark:text-white">
