Changed the intro text and removed the favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h4 class="font-semibold text-black dark:text-white">
-      Hi, I'm Marko Vidaković <span class="text-xl">👋🏻</span>
+      Hello! I'm Marko
     </h4>
     <div class="space-y-16">
       <section>
@@ -128,8 +128,7 @@ const work = await Promise.all(
         </h5>
         <article>
           <p>
-            If you want to get in touch with me about something or just to say hi,
-            reach out on social media or send me an email.
+            If you want to get in touch with me about something or just to say hi, don't hesitate to send me an email.
           </p>
         </article>
         <ul class="flex flex-wrap gap-2">
