Intro text change

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,18 +22,18 @@ import { SITE } from "@consts";
         <Link href="/blog">
           blog
         </Link>
-        <span>
+        <!-- <span>
           {`/`}
-        </span>
+        </span> -->
         <!-- <Link href="/work">
           work
         </Link>
         <span>
           {`/`}
         </span> -->
-        <Link href="/projects">
+        <!-- <Link href="/projects">
           projects
-        </Link>
+        </Link> -->
       </nav>
     </div>
   </Container>
