--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,6 @@ const work = await Promise.all(
         <article class="space-y-4">
           <p class="">
             I'm a software engineer who enjoys building fast, scalable, and well-designed systems. 
-            Solving complex problems, designing clean architectures, and finding elegant solutions are what I enjoy most. 
             I mainly work with Go and TypeScript, building everything from backend services to modern frontends, always striving for simplicity, performance, and maintainability.
           </p>
           <p class="">
@@ -104,7 +103,7 @@ const work = await Promise.all(
         </ul>
       </section> -->
 
-      <section class="space-y-6">
+      <!-- <section class="space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
             Recent projects
@@ -120,11 +119,11 @@ const work = await Promise.all(
             </li>
           ))}
         </ul>
-      </section>
+      </section> -->
 
       <section class="space-y-4">
         <h5 class="font-semibold text-black dark:text-white">
-          Let's Connect
+          Let's connect
         </h5>
         <article>
           <p>
