--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,14 +33,13 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h4 class="font-semibold text-black dark:text-white">
-      Hello! I'm Marko
+      Hello! I'm Marko <span class="text-xl">👋🏻</span>
     </h4>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <p class="">
             I'm a software engineer who enjoys building fast, scalable, and well-designed systems. 
-            I mainly work with Go and TypeScript, building everything from backend services to modern frontends, always striving for simplicity, performance, and maintainability.
           </p>
           <p class="">
             Learning is a constant for me—whether it’s exploring new technologies, refining existing approaches, or diving into a completely unfamiliar topic, 
