Intro text changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,10 +39,10 @@ const work = await Promise.all(
       <section>
         <article class="space-y-4">
           <p class="">
-            I'm a software engineer who enjoys building fast, scalable, and well-designed systems. 
+            I'm a software engineer who enjoys building fast, scalable, and well designed systems.
           </p>
           <p class="">
-            Learning is a constant for me—whether it’s exploring new technologies, refining existing approaches, or diving into a completely unfamiliar topic, 
+            Learning is a constant for me. Whether it’s exploring new technologies, refining existing approaches, or diving into a completely unfamiliar topic, 
             I enjoy the process of improving and evolving as a developer.
           </p>
           <p class="">
